# dwm_eotf_rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES  build.rs  check_task.ps1
c_src/: DXBCChecksum.c
dwm_eotf_rs/: Cargo.toml  build.rs  manifest.xml
dwm_eotf_rs/scripts/: check_registration.ps1  register_task.ps1  unregister_all_tasks.ps1  unregister_task.ps1
dwm_eotf_rs/src/: args.rs  main.rs  patcher.rs  startup.rs  tray.rs
shader_patcher/: Cargo.toml  build.rs
shader_patcher/src/: dxcontainer.rs  error.rs  lib.rs  winapi.rs
src/: dxcontainer.rs  error.rs  lib.rs  main.rs  patcher.rs  shaders.rs  utils.rs  winapi.rs
