[package]
name = "dwm_eotf_rs"
version = "0.1.0"
edition = "2024"
build = "build.rs"
license = "MIT"

[dependencies]
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
winsafe = { version = "0.0.27", features = ["advapi", "kernel", "psapi"] }

winapi = { version = "0.3.9", features = ["memoryapi", "std"] }
ntapi = "0.4.3"
md5 = "0.8.0"

[build-dependencies]
winresource = "0.1.31"
cc = "1.2.57"