[package]
name = "dwm_eotf_rs"
description = "Replaces piecewise sRGB EOTF in Windows DWM with gamma 2.2"
authors = ["Sergey Dzhumageldiev"]
version = "0.4.0"
edition = "2024"
build = "build.rs"
license = "MIT"

[dependencies]
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
aho-corasick = "1.1.4"

winsafe = { version = "0.0.27", features = ["advapi"] }
winapi = { version = "0.3.9", features = ["memoryapi", "std"] }
ntapi = "0.4.3"

[build-dependencies]
winresource = "0.1.31"
cc = "1.2.57"

[profile.release]
lto = "fat"
opt-level = 3
