[package]
name = "dwm_eotf_rs"
authors = ["Sergey Dzhumageldiev"]
description = "Patches DWM's shaders to use proper EOTF (gamma)"
version = "0.9.0"
edition = "2024"
build = "build.rs"
license = "MIT"

[dependencies]
shader_patcher = { path = "../shader_patcher" }

tracing = { workspace = true }
bytemuck = { workspace = true }
winapi = { workspace = true, features = ["winuser", "wincon"] }

aho-corasick = "1.1.4"

tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1.0.102"
trayicon = "0.4.0"

[build-dependencies]
winresource = "0.1.31"
