[package]
name = "dwm_eotf_rs"
authors = ["Sergey Dzhumageldiev"]
description = "Patches DWM's shaders to use proper EOTF (gamma)"
version = "0.9.2"
edition = "2024"
build = "build.rs"
license = "MIT"

[dependencies]
shader_patcher = { path = "../shader_patcher" }
tracing = { workspace = true }
bytemuck = { workspace = true }
windows = { workspace = true, features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }

aho-corasick = "1.1.4"

tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1.0.102"
trayicon = "0.4.0"

[build-dependencies]
winresource = "0.1.31"
