[package]
name = "shader_patcher"
authors = ["Sergey Dzhumageldiev"]
version = "0.2.0"
edition = "2024"
build = "build.rs"
license = "MIT"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
winapi = { workspace = true, features = ["memoryapi", "std"] }
winsafe = { version = "0.0.27", features = ["advapi"] }
ntapi = "0.4.3"

[build-dependencies]
cc = "1.2.57"
