[package]
name = "shader_patcher"
authors = ["Sergey Dzhumageldiev"]
version = "0.3.0"
edition = "2024"
build = "build.rs"
license = "MIT"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
winsafe = { version = "0.0.27", features = ["advapi"] }
windows = { version = "0.62.2", features = ["Win32_System_Memory"] }

[build-dependencies]
cc = "1.2.59"
